--- a/css/slim.css
+++ b/css/slim.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Code:400,500,600|Fira+Sans&display=swap&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500,600|Fira+Sans&display=swap&subset=cyrillic');
 
 html {
   box-sizing: border-box; }
@@ -53,7 +53,7 @@ tbody tr:nth-child(odd) th {
   background-color: #fff; }
 
 body {
-  font: 17px/28px 'Fira Sans', sans-serif;
+  font: 17px/28px 'Open Sans', sans-serif;
   color: #353535;
   letter-spacing: -.3px;
   text-rendering: optimizeLegibility;
@@ -304,7 +304,7 @@ button,
   margin-bottom: 2rem; }
 
 .post-title a {
-  font-family: 'Fira Sans';
+  font-family: 'Open Sans';
   color: #333;
   background: #fff;
   line-height: 60px;
@@ -357,7 +357,7 @@ button,
           transition: all 0.2s;
   text-decoration: none; }
 
-.menu { font-family: 'Fira Sans'; margin: 0 0 0 auto; padding: 0 0 30px 0; vertical-align: top; text-align: right;}
+.menu { font-family: 'Open Sans'; margin: 0 0 0 auto; padding: 0 0 30px 0; vertical-align: top; text-align: right;}
 .menu > li { list-style: none; display: inline-block; margin: 0 1.5em 0 0; vertical-align: top; }
 .menu__item, a.menu__item { color: hsl(215, 0%, 65%); border-color: transparent; display: inline-block;  text-decoration: none;  }
 .menu__item_selected, a.menu__item_selected, a.menu__item:hover { color: inherit; border-color: hsl(45,98%,77%); color: black; border-bottom: 2px solid hsl(45,0%,50%); }
